--- a/src/app/main-content/main-content.component.html
+++ b/src/app/main-content/main-content.component.html
@@ -11,7 +11,7 @@
       </ul>
     </div>
    <!-- INPUT FIELD FOR CONVERSION -->
-      <input class="input-style" [value]="resultL" (keyup)="convert($event)" placeholder="type amount here" type="number"  name="inputLHS">
+      <input class="input-style" [(ngModel)]="resultL" (keyup)="convert($event)" placeholder="type amount here" type="number"  name="inputLHS">
   </div>
   <div class="conversion-box">
 
@@ -25,7 +25,7 @@
       </ul>
     </div>
     <!-- INPUT FIELD FOR CONVERSION -->
-      <input class="input-style" [value]="resultR" (keyup)="convert($event)" placeholder="type amount here" type="number" name="inputRHS">
+      <input class="input-style" [(ngModel)]="resultR" (keyup)="convert($event)" placeholder="type amount here" type="number" name="inputRHS">
     
   </div>
 
