--- a/src/styles.css
+++ b/src/styles.css
@@ -19,22 +19,25 @@ body {
 .row-one {
     display: grid;
     grid-template-columns: 4fr 10fr 4fr;
+    width: 100vw;
     border: black 1px solid;
     height: 100%;
 }
 .row-two {
-    display: flex;
+    display: grid;
     border: black 1px solid;
     height: 100%;
     align-items: center;
     justify-content: center;
-    flex-flow:row wrap;
+    padding: 50px;
 }
 .row-three {
     display: grid;
-    grid-template-columns: 3fr 10fr;
-    border: black 1px solid;
-    height: 100%;
+    border: black 1px none;
+    height:100%;
+    width: 100vw;
+    padding: .5px;
+    margin: 5px;
 }
 .padding{
     padding: 12px;
@@ -43,10 +46,8 @@ body {
 }
 
 .conversion-box {
-    border-radius: 10px;
-    border: black 1px solid;
     height: 5vh;
-    margin: 10px;
+    margin: 0px auto;
     padding: 4px;
 }
 
@@ -61,7 +62,35 @@ body {
     margin: 5px;
 
 }
+.input {
+    box-shadow: 1px 1px black;
+}
 .input-style {
-    margin: 5px;
+    box-shadow: 1px 1px 1px .1px black;
+    margin: 15px;
     border: none;
+    border-radius: 2px;
+}
+.input-style:hover {
+    box-shadow: 1px 1px 1px .1px black;
+    margin: 15px;
+    border: none;
+    border-radius: 1.5px;
+    background-image: linear-gradient(to left, rgba(139, 133, 133, 0), rgb(94, 89, 89, .1));
+}
+.input-decimal {
+    margin: 7px;
+    border: none;
+    width: 12px
+}
+.decimal-box {
+    display: flex;
+    width: 100vw;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+.line-break{
+    width:100%;
+    height: 1px;
 }
