wiring save conversion

--- a/src/app/main-content/main-content.component.html
+++ b/src/app/main-content/main-content.component.html
@@ -30,8 +30,8 @@
   </div>
 
   <div class="button-holder">
-    <button class="button">
-      This button
+    <button (click)=saveConversion() class="button">
+      Save Conversion
     </button>
     <button class="button">
       This button
