save conversion button

--- a/src/app/main-footer/main-footer.component.html
+++ b/src/app/main-footer/main-footer.component.html
@@ -1,5 +1,7 @@
 <div class="row-three">
-        
+    <div class="threeButtons">
+        <button (click)=saveConversion() type="button" class="btn btn-success">Save Conversion</button>
+      </div>
   
 </div>
 
