--- a/src/app/main-footer/main-footer.component.html
+++ b/src/app/main-footer/main-footer.component.html
@@ -1,6 +1,7 @@
 <div class="row-three">
     <div class="threeButtons">
         <button (click)=saveConversion() type="button" class="btn btn-success">Save Conversion</button>
+        <button (click)=clearHistory() type="button" class="btn btn-danger">Clear History</button>
       </div>
   
 </div>
