--- a/src/app/main-footer/main-footer.component.html
+++ b/src/app/main-footer/main-footer.component.html
@@ -16,6 +16,34 @@
         <div class="no-items" *ngIf="mainframe.history.length === 0">
             <h5>No history has been saved</h5>
         </div>
+        <table *ngIf="mainframe.history.length > 0">
+                <thead>
+                  <tr>
+                    <td></td>
+                    <td>Country</td>
+                    <td>Denomination</td>
+                    <td>Symbol</td>
+                    <td>           </td>
+                    <td>Country</td>
+                    <td>Denomination</td>
+                    <td>Symbol</td>
+                    <td>        </td>
+                    <td></td>
+                  </tr>
+                </thead>
+                <tbody>
+                        <tr *ngFor= "let order of history; let i = index">         
+                            <td><input [(ngModel)]="mainframe.history.countryLeft" type="text" class="form-control" placeholder="PID"></td>
+                            <td><input [(ngModel)]="mainframe.history.denominationLeft"type="text" class="form-control" placeholder="Description"></td>
+                            <td><input [(ngModel)]="mainframe.history.symbolLeft"type="text" class="form-control" placeholder="Price"></td>
+                            <td><input [(ngModel)]="mainframe.history.conversionLHS"type="text" class="form-control" placeholder="Quantity"></td>
+                            <td><input [(ngModel)]="mainframe.history.countryRight" type="text" class="form-control" placeholder="PID"></td>
+                            <td><input [(ngModel)]="mainframe.history.denominationRight"type="text" class="form-control" placeholder="Description"></td>
+                            <td><input [(ngModel)]="mainframe.history.symbolRight"type="text" class="form-control" placeholder="Price"></td>
+                            <td><input [(ngModel)]="mainframe.history.conversionRHS"type="text" class="form-control" placeholder="Quantity"></td>
+                        </tr>
+                </tbody>
+              </table>
     </div>
     <div class="padding">
     </div>
