--- a/src/app/main-footer/main-footer.component.html
+++ b/src/app/main-footer/main-footer.component.html
@@ -40,6 +40,7 @@
                             <td><input [(ngModel)]="detail.denominationRight"type="text" class="form-control"></td>
                             <td><input [(ngModel)]="detail.symbolRight"type="text" class="form-control"></td>
                             <td><input [(ngModel)]="detail.conversionRight"type="text" class="form-control"></td>
+                            <td><button (click)="delete(i)" mat-raised-button type="button" class="btn btn-danger">X</button></td>
                     </tr>
                 </tbody>
               </table>
