--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,4 @@
+
 *{
     margin: 0px;
     padding: 0px;
@@ -13,7 +14,7 @@ body {
 
 .main-page {
     display: grid;
-    grid-template-rows: 3fr 9fr 5fr;
+    grid-template-rows: 3fr 9fr 6fr;
     height: 100%;
 }
 .row-one {
@@ -33,8 +34,7 @@ body {
 }
 
 .row-three {
-    grid-template-columns: 4fr 10fr 4fr;
-    align-items: flex-start;
+    grid-template-columns: 3fr 4fr 4fr 3fr;
     justify-content: center;
     display: grid;
     border: black 1px none;
