major changes to footer -three column for results, random currency button, placeholder for edit button

--- a/src/app/main-footer/main-footer.component.css
+++ b/src/app/main-footer/main-footer.component.css
@@ -4,6 +4,10 @@
     position: relative;
 }
 
+.footerRowTwo{
+    grid-template-columns: 3fr 4fr 4fr 3fr;
+}
+
 .arrayBox{
     text-align: center
 }
