--- a/src/app/main-footer/main-footer.component.css
+++ b/src/app/main-footer/main-footer.component.css
@@ -4,12 +4,12 @@
     position: relative;
 }
 
-.footerRowTwo{
-    grid-template-columns: 3fr 4fr 4fr 3fr;
+.footerColumnTwo{
+    max-width: 100%;
 }
 
 .arrayBox{
-    text-align: center
+    text-align: center;
 }
 
 .no-items {
@@ -20,10 +20,29 @@
 
 .table-grid {
     float: center;
-    overflow: hidden;
+    overflow: none;
 }
 
 .center-height{
     align-items: center;
     justify-self: center;
 }
+
+.fill{
+    background-color: #56cded;
+    border: black 2px solid;
+    height: 100%;
+}
+
+.buttonEdit{
+    height:25px;
+    width:25px;
+}
+
+.vertical-center {
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    -ms-transform: translateY(50%);
+    transform: translateY(50%);
+  }
