--- a/src/app/main-footer/main-footer.component.html
+++ b/src/app/main-footer/main-footer.component.html
@@ -1,20 +1,18 @@
 <div class="row-three">
-    <div class="padding">
-        <div class="center-height">
+    <div>
+        <div class="center-height fill">
             <div>
-                <button mat-raised-button (click)=saveConversion() type="button" class="btn btn-success">Save
+                <button mat-raised-button (click)=saveConversion() type="button" class="btn-sm btn-success">Save
                     Conversion</button>
             </div>
             <div style="text-align:center">
-                <button mat-raised-button (click)=clearHistory() type="button" class="btn btn-danger">Clear
+                <button mat-raised-button (click)=clearHistory() type="button" class="btn-sm btn-danger">Clear
                     History</button>
             </div>
         </div>
     </div>
     <div class="arrayBox">
         <table class="table-grid" *ngIf="mainframe.history.length > 0">
-            <thead>
-            </thead>
             <tbody style="font-family:Arial;font-size: 8pt">
                 <tr *ngFor="let detail of mainframe.history; let i = index">
                     <td>{{detail.countryLeft}}</td>
@@ -32,11 +30,11 @@
                     <td>
                         <div class="btn-group btn-group-sm" role="group" aria-label="Basic example">
                             <button (click)="edit(i, 'base')" mat-raised-button type="button"
-                                class="btn btn-info">Edit</button>
+                                class="buttonEdit btn btn-info" style="font-size: 8pt">✎</button>
                             <button (click)="save(i, 'base')" mat-raised-button type="button"
-                                class="btn btn-success">Save</button>
+                                class="buttonEdit btn btn-success" style="font-size: 8pt">✔</button>
                             <button (click)="delete(i, 'base')" mat-raised-button type="button"
-                                class="btn btn-danger">X</button>
+                                class="buttonEdit btn btn-danger"style="font-size: 8pt">X</button>
 
                         </div>
                     </td>
@@ -44,7 +42,7 @@
             </tbody>
         </table>
     </div>
-    <div class="arrayBox">
+    <div class="arrayBox footerColumnTwo">
         <div class="no-items" *ngIf="mainframe.history.length === 0">
             <h6>No history has been saved</h6>
         </div>
@@ -57,7 +55,7 @@
                     <!-- <td>{{detail.denominationLeft}}</td>
                     <td>{{detail.symbolLeft}}</td> -->
                     <td *ngIf="detail.editMode">
-                        <input [(ngModel)]="detail.conversionLeft" type="number" class="form-control"
+                        <input class="input-style" [(ngModel)]="detail.conversionLeft" type="number" class="form-control"
                             placeholder="input"></td>
                     <td *ngIf="!detail.editMode">{{detail.conversionLeft}}</td>
                     <td>=</td>
@@ -68,11 +66,11 @@
                     <td>
                         <div class="btn-group btn-group-sm" role="group" aria-label="Basic example">
                             <button (click)="edit(i, 'overflow')" mat-raised-button type="button"
-                                class="btn btn-info">Edit</button>
+                                class="buttonEdit btn btn-info" style="font-size: 8pt">✎</button>
                             <button (click)="save(i, 'overflow')" mat-raised-button type="button"
-                                class="btn btn-success">Save</button>
+                                class="buttonEdit btn btn-success"style="font-size: 8pt">✔</button>
                             <button (click)="delete(i, 'overflow')" mat-raised-button type="button"
-                                class="btn btn-danger">X</button>
+                                class="buttonEdit btn btn-danger"style="font-size: 8pt">X</button>
 
                         </div>
                     </td>
@@ -101,11 +99,11 @@
                     <td>
                         <div class="btn-group btn-group-sm" role="group" aria-label="Basic example" style="font-family:Arial;font-size: 8pt">
                             <button (click)="edit(i, 'overFlowTwo')" mat-raised-button type="button"
-                                class="btn btn-info">Edit</button>
+                                class="buttonEdit btn btn-info" style="font-size: 8pt">✎</button>
                             <button (click)="save(i, 'overFlowTwo')" mat-raised-button type="button"
-                                class="btn btn-success">Save</button>
+                                class="buttonEdit btn btn-success" style="font-size: 8pt">✔</button>
                             <button (click)="delete(i, 'overflowTwo')" mat-raised-button type="button"
-                                class="btn btn-danger">X</button>
+                                class="buttonEdit btn btn-danger" style="font-size: 8pt">X</button>
 
                         </div>
                     </td>
@@ -113,12 +111,14 @@
             </tbody>
         </table>
     </div>
-    <div class="padding">
+    <div>
+    <div class="center-height fill">
         <div>
-            <button mat-raised-button (click)="randomCurrency()" type="button" class="btn btn-warning">Random
+            <button mat-raised-button (click)="randomCurrency()" type="button" class="btn-sm btn-warning vertical-center">Random
                 Currency Generator</button>
         </div>
     </div>
+</div>
 </div>
 
 <!-- <app-flex-modal #flex1
