--- a/src/app/main-header/main-header.component.html
+++ b/src/app/main-header/main-header.component.html
@@ -1,5 +1,5 @@
-<div class="row-one">
-    <div class="padding">Logo</div>
-    <div class="padding">Title</div>
-    <div class="padding">MISC</div>
-</div>
+ <div class="row-one image_div">
+        <div></div>
+        <div></div>
+        <div></div>
+    </div>
