--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <div class="main-page">
     <app-main-header></app-main-header>
-    <app-main-content></app-main-content>
+    <!-- <app-main-content></app-main-content> -->
+    <router-outlet></router-outlet>
     <app-main-footer></app-main-footer>
+   
 </div>
