--- a/src/app/main-content/main-content.component.html
+++ b/src/app/main-content/main-content.component.html
@@ -1,7 +1,7 @@
-<div *ngIf="dataReady" class="row-two">
+<!-- <div *ngIf="dataReady" class="row-two">
   <div class="conversion-box">
 
-    <!-- DROP DOWN BUTTON -->
+    DROP DOWN BUTTON
     <div class="btn-group" dropdown>
       <button id="button-basic" dropdownToggle type="button" class="btn btn-primary dropdown-toggle" aria-controls="dropdown-basic">
         {{this.mainframe.currentCountry.base}}<span class="caret"></span>
@@ -10,12 +10,12 @@
         <li (click)="setCountry(currency, resultLeft.value)" *ngFor="let currency of currencies; let i = index" role="menuitem"><a [ngStyle]="fontFamily" class="dropdown-item" href="#">{{currency.base}}</a></li>
       </ul>
     </div>
-   <!-- INPUT FIELD FOR CONVERSION -->
+   INPUT FIELD FOR CONVERSION
       <input class="input-style" [disabled]="this.mainframe.conversionCountry === 'Pick a Currency'" [(ngModel)]="resultL" name="inputLeft" (click)="clear(resultLeft.name)" (keyup)="this.mainframe.convert(resultLeft.value)" type="number" placeholder="Type Amount Here" #resultLeft>
   </div>
   <div class="conversion-box">
 
-     <!-- DROP DOWN BUTTON -->
+     DROP DOWN BUTTON
     <div class="btn-group" dropdown>
       <button id="button-basic" dropdownToggle type="button" class="btn btn-primary dropdown-toggle" aria-controls="dropdown-basic">
        {{this.mainframe.conversionCountry}} <span class="caret"></span>
@@ -24,7 +24,7 @@
         <li (click)="setRate(key, resultLeft.value)" *ngFor="let key of conversionLabels; let i = index" role="menuitem"><a [ngStyle]="fontFamily" class="dropdown-item" href="#">{{key}}</a></li>
       </ul>
     </div>
-    <!-- INPUT FIELD FOR CONVERSION -->
+    INPUT FIELD FOR CONVERSION
      <input [(ngModel)]="this.mainframe.resultRightHandSide" disabled="true"class="input-style" type="number" placeholder="Output">
   </div>
   <div class="line-break"></div>
@@ -35,4 +35,21 @@
       <input class="input-decimal" [(ngModel)]="decimalPlaces"> 
       <button (click)="increase(resultLeft.value)" type="button" class="btn btn-success">+</button>
 </div>
-</div>
+</div> -->
+
+
+
+
+<!-- <div class="row-two">
+  <div class="container-padding">
+    r2c1
+  </div> -->
+  <!-- <div class="container-padding">
+    <router-outlet class="main-outlet"></router-outlet>
+  </div> -->
+  <!-- <div class="container-padding">
+    r2c3
+  </div>
+</div> -->
+
+<!-- <router-outlet class="main-outlet"></router-outlet> -->
