--- a/src/app/main-header/main-header.component.html
+++ b/src/app/main-header/main-header.component.html
@@ -1,5 +1,53 @@
+<!-- <div class="row-one">
+    <div class="padding">Logo</div>
+    <div class="padding">
+        <button (click)="navigateTo('')" class="nav-buttons" type="button" mat-raised-button color="Primary">
+            Home
+        </button>
+        <button (click)="navigateTo('courses')" class="nav-buttons" type="button" mat-raised-button color="warn">
+            About
+        </button>
+        <button (click)="navigateTo('courses')" class="nav-buttons" type="button" mat-raised-button color="warn">
+            History
+        </button>
+        <button (click)="navigateTo('courses')" class="nav-buttons" type="button" mat-raised-button color="warn">
+            Login
+        </button>
+    </div>
+    <div class="padding"><button (click)="navigateTo('courses')" class="nav-buttons" type="button" mat-raised-button
+            color="warn">
+            Login
+        </button>
+    </div>
+</div> -->
+
 <div class="row-one">
     <div class="padding">Logo</div>
-    <div class="padding">Title</div>
-    <div class="padding">MISC</div>
+    <div class="padding">
+        <a class="navbar-brand">Navigation</a>
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+                <a class="nav-link" href="home">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link" href="about">About <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link" href="history">History <span class="sr-only">(current)</span></a>
+            </li>
+        </ul>
+    </div>
+    <div class="padding">
+            <div class="center-height">
+                <div>
+                    <button mat-raised-button (click)="navigateTo('home')" type="button" class="btn btn-success">
+                        Login</button>
+                </div>
+                <div class="space"></div>
+                <div>
+                    <button mat-raised-button (click)="navigateTo('')" type="button" class="btn btn-danger">
+                        Logout</button>
+                </div>
+            </div>
+        </div>
 </div>
